--- a/index.html
+++ b/index.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>Lalitha</title>
-    <link rel="stylesheet" type="text/css" href="index.css">
-    <style>
-       h1,p {
-            color:green;
-         }
-        
-    </style>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width,initial-scale=1.0">
+	<title>Bootstrap</title>
+	<link rel="stylesheet" href="css/bootstrap.min.css">
 </head>
-<body style="background-color:aqua">
-<h1>css</h1>
-<p>abcdefghijklmnopqrstuvwxyz;</p>
-<h2>Types of css</h2>
-<p>inline css</p>
-<h3>frontend online class using react</h3>
-<p>internal css</p>
-<p>external css</p>
+<body>
+	<section class="container">
+		<!--<article class="row">
+			<div class="col-md-6 bg-primary">col1</div>
+			<div class="col-md-10 bg-warning">col2</div>
+		</article> -->
+		<div class="card text-center" style="width:25%;">
+			<img src="" alt="profile image">
+			<h2>Lalitha</h2>
+			<hr>
+			<h4>lalithanukala3@gmail.com</h4>
+			<h4>7981615166</h4>
+			<a href="#" class="btn btn-primary">View profile</a>
+		</div>
+	</section>
 </body>
-</html>
