--- a/resume.html
+++ b/resume.html
@@ -12,7 +12,7 @@
 		<div class="leftdiv">
 
 			<div class="ld-1">
-				<img src="images/profile pic.png" alt="profile pic">
+				<img src="profile pic.png" alt="profile pic">
 				<h2>N.Lalitha</h2>
 				<P>Student</P>
 				<hr>
